--- a/New folder (2)/Badminton_Sport/Views/Home/Index.cshtml
+++ b/New folder (2)/Badminton_Sport/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
             <h1>New Season Arrivals.</h1>
             <h2>Check out all the new trends</h2>
             <div class="button">
-                <a href="#" class="hvr-shutter-out-horizontal">Shop Now</a>
+               <li class="hvr-shutter-out-horizontal">@Html.ActionLink("Shop Now", "Index", "Product")</li>
             </div>
         </div>
     </div>
