--- a/New folder (2)/Badminton_Sport/Views/Shared/_Layout.cshtml
+++ b/New folder (2)/Badminton_Sport/Views/Shared/_Layout.cshtml
@@ -48,50 +48,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <div class="col1">
                                         <div class="h_nav">
                                             <ul>
-                                                <li><a href="men.html">Accessories</a></li>
-                                                <li><a href="men.html">Bags</a></li>
-                                                <li><a href="men.html">Caps & Hats</a></li>
-                                                <li><a href="men.html">Hoodies & Sweatshirts</a></li>
-                                                <li><a href="men.html">Jackets & Coats</a></li>
-                                                <li><a href="men.html">Jeans</a></li>
-                                                <li><a href="men.html">Jewellery</a></li>
-                                                <li><a href="men.html">Jumpers & Cardigans</a></li>
-                                                <li><a href="men.html">Leather Jackets</a></li>
-                                                <li><a href="men.html">Long Sleeve T-Shirts</a></li>
-                                                <li><a href="men.html">Loungewear</a></li>
+                                                <h4>Category</h4>
+                                                @Html.Action("ViewCategory", "Category")
                                             </ul>
                                         </div>
                                     </div>
                                     <div class="col1">
                                         <div class="h_nav">
                                             <ul>
-                                                <li><a href="men.html">Shirts</a></li>
-                                                <li><a href="men.html">Shoes, Boots & Trainers</a></li>
-                                                <li><a href="men.html">Shorts</a></li>
-                                                <li><a href="men.html">Suits & Blazers</a></li>
-                                                <li><a href="men.html">Sunglasses</a></li>
-                                                <li><a href="men.html">Sweatpants</a></li>
-                                                <li><a href="men.html">Swimwear</a></li>
-                                                <li><a href="men.html">Trousers & Chinos</a></li>
-                                                <li><a href="men.html">T-Shirts</a></li>
-                                                <li><a href="men.html">Underwear & Socks</a></li>
-                                                <li><a href="men.html">Vests</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="col1">
-                                        <div class="h_nav">
-                                            <h4>Popular Brands</h4>
-                                            <ul>
-                                                <li><a href="men.html">Levis</a></li>
-                                                <li><a href="men.html">Persol</a></li>
-                                                <li><a href="men.html">Nike</a></li>
-                                                <li><a href="men.html">Edwin</a></li>
-                                                <li><a href="men.html">New Balance</a></li>
-                                                <li><a href="men.html">Jack & Jones</a></li>
-                                                <li><a href="men.html">Paul Smith</a></li>
-                                                <li><a href="men.html">Ray-Ban</a></li>
-                                                <li><a href="men.html">Wood Wood</a></li>
+                                                <h4>Produce</h4>
+                                                @Html.Action("ViewProduce", "Produce")
                                             </ul>
                                         </div>
                                     </div>
