--- a/New folder (2)/Badminton_Sport/Views/Produce/ProductByProduce.cshtml
+++ b/New folder (2)/Badminton_Sport/Views/Produce/ProductByProduce.cshtml
@@ -1,11 +1,12 @@
 ﻿@using Badminton_Sport.Models.Data;
 @model List<PRODUCT>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "ProductByProduce";
 }
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 
 <div class="women_main">
     <div class="col-md-9 w_content">
@@ -15,6 +16,10 @@
         </div>
         <!-- grids_of_4 -->
         <div class="grids_of_4">
+            @if (Model.Count == 0)
+            {
+                <h1>@ViewBag.PRODUCE</h1>
+            }
             @foreach (var item in Model)
             {
                 <div class="grid1_of_4 simpleCart_shelfItem">
