--- a/New folder (2)/Badminton_Sport/Views/Category/ProductByCategory.cshtml
+++ b/New folder (2)/Badminton_Sport/Views/Category/ProductByCategory.cshtml
@@ -18,34 +18,30 @@
         <div class="grids_of_4">
             @if (Model.Count == 0)
             {
-                <h1>@ViewBag.PRODUCT</h1>
+                <h1>@ViewBag.PRODUCE</h1>
             }
             @foreach (var item in Model)
             {
-                <div class="grid1_of_4 simpleCart_shelfItem">
-                    <div class="content_box">
-                        <a href="@Url.Action("Show", new { @productid=item.PRODUCT_ID })">
-                            <div class="view view-fifth">
-                                <img src="@Url.Content("~/Content/Layout/images/" + item.IMAGES)" class="img-responsive" alt="" />
-                            </div>
-                        </a>
-                        <h5><a href="@Url.Action("Show", new { @productid=item.PRODUCT_ID })">@item.PRODUCT_NAME</a></h5>
-                        <div class="size_1">
-                            <span class="item_price">@item.PRICE</span>
-                            <div class="clearfix"></div>
+            <div class="grid1_of_4 simpleCart_shelfItem">
+                <div class="content_box">
+                    <a href="@Url.Action("Show", new { @productid=item.PRODUCT_ID })">
+                        <div class="view view-fifth">
+                            <img src="@Url.Content("~/Content/Layout/images/" + item.IMAGES)" class="img-responsive" alt="" />
                         </div>
-                        <div class="size_2">
-                            <div class="size_2-left">
-                                <input type="number" class="item_quantity quantity_1" value="1" />
-                            </div>
-                            <div class="size_2-right"><input type="button" class="item_add add3" value="" /></div>
-                            <div class="clearfix"> </div>
-                        </div>
+                    </a>
+                    <h5><a href="@Url.Action("Show", new { @productid=item.PRODUCT_ID })">@item.PRODUCT_NAME</a></h5>
+                    <div class="size_1">
+                        <span class="item_price">@item.PRICE</span>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="size_2">
+                        <div class="size_2-right"><a href="/AddItem?productID=@item.PRODUCT_ID&quantity=1" class="item_add item_add1 btn_5" value="">Add</a></div>
+                        <div class="clearfix"> </div>
                     </div>
                 </div>
+            </div>
             }
         </div>
-
         <!-- end grids_of_4 -->
     </div>
     <!-- start sidebar -->
