--- a/New folder (2)/Badminton_Sport/Views/Produce/ProductByProduce.cshtml
+++ b/New folder (2)/Badminton_Sport/Views/Produce/ProductByProduce.cshtml
@@ -35,10 +35,7 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="size_2">
-                            <div class="size_2-left">
-                                <input type="number" class="item_quantity quantity_1" value="1" />
-                            </div>
-                            <div class="size_2-right"><input type="button" class="item_add add3" value="" /></div>
+                            <div class="size_2-right"><a href="/AddItem?productID=@item.PRODUCT_ID&quantity=1" class="item_add item_add1 btn_5" value="">Add</a></div>
                             <div class="clearfix"> </div>
                         </div>
                     </div>
