--- a/New folder (2)/Badminton_Sport/Views/Shared/_Layout.cshtml
+++ b/New folder (2)/Badminton_Sport/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
     <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
     <link href="~/Content/Layout/css/bootstrap.css" rel='stylesheet' type='text/css' />
+    <link href="/Content/Layout/css/jquery-ui.css" rel="stylesheet" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <!-- Custom Theme files -->
     <link href="~/Content/Layout/css/style.css" rel='stylesheet' type='text/css' />
@@ -16,6 +17,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!--webfont-->
     <link href='http://fonts.googleapis.com/css?family=Lato:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="~/Content/Layout/js/jquery-1.11.1.min.js"></script>
+    <script src="/Content/Layout/js/jquery-ui.js"></script>
     <!-- start menu -->
     <link href="~/Content/Layout/css/megamenu.css" rel="stylesheet" type="text/css" media="all" />
     <script type="text/javascript" src="~/Content/Layout/js/megamenu.js"></script>
@@ -70,20 +72,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
             </div>
             <div class="col-xs-4 header-bottom-right">
-                <div class="box_1-cart">
-                    <div class="box_11">
-                        <a href="checkout.html">
-                            <h4><p>Cart: <span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span> items)</p><img src="images/bag.png" alt="" /><div class="clearfix"> </div></h4>
-                        </a>
+                @{ Html.RenderAction("HeaderCart", "Home");}
+                <form action="/Product/Search" method="get">
+                    <div class="search">
+                        <input type="text" id="txtKeyword" name="keyword" class="textbox" placeholder="Nhập từ khoá">
+                        <input type="submit" value="">
+                        <div id="response"> </div>
                     </div>
-                    <p class="empty"><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
-                    <div class="clearfix"> </div>
-                </div>
-                <div class="search">
-                    <input type="text" name="s" class="textbox" value="Search" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}">
-                    <input type="submit" value="Subscribe" id="submit" name="submit">
-                    <div id="response"> </div>
-                </div>
+                </form>
                 <div class="clearfix"></div>
             </div>
             <div class="clearfix"></div>
@@ -95,6 +91,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
+        <script src="/Content/Layout/js/controller/baseController.js"></script>
+        @RenderSection("jsFooter", required: false);
     </div>
 </body>
 </html>
