--- a/New folder (2)/Badminton_Sport/Views/Shared/_Layout.cshtml
+++ b/New folder (2)/Badminton_Sport/Views/Shared/_Layout.cshtml
@@ -27,8 +27,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="header_top">
         <div class="container">
             <div class="cssmenu">
+                @*@{Html.RenderPartial("HeaderLogin");}*@
                 <ul>
-                    <li class="active"><a href="login.html">My Account</a></li>
+                    @if (Session["userId"] == null)
+                    {
+                        <li class="active"><a href="/home/login">Login</a></li>
+                    }
+                    else
+                    {
+                        <li class="active"><a href="#">My Accout</a></li>
+                    }
                 </ul>
             </div>
         </div>
@@ -38,7 +46,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
             <div class="col-xs-8 header-bottom-left">
                 <div class="col-xs-2 logo">
-                    <h1><a href="#"><span>Buy</span>shop</a></h1>
+                    <h1><a href="/"><span>Buy</span>shop</a></h1>
                 </div>
                 <div class="col-xs-6 menu">
                     <ul class="megamenu skyblue">
